update user management features and add exception handling